--- a/test/test_risk_management.yml
+++ b/test/test_risk_management.yml
@@ -1,3 +1,5 @@
 -
-  Eckhards test bed
+  Set up a Project for a Risk
 -
+  !record {model: project.project, id: t4_risk_project }:
+    name: T4 Risk Project
